--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,14 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2.3.1
 
+      - name: Install Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '13.x'
+
+      - name: Install Project Dependencies
+        run: npm install
+
       - name: Build
         run: npm run build
 
