--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^13.4.19",
+    "next": "^14.2.4",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "sass": "^1.66.1",
     "sharp": "^0.32.5"
+  },
+  "devDependencies": {
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3"
   }
 }
