--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next lint && next build && next export",
+    "build": "next lint && next build",
     "start": "next start",
     "lint": "next lint"
   },
