--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+        name: deployment
 
     steps:
       - name: Checkout code
