--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -30,10 +30,8 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y sshpass
       
       - name: Publish to server
-        run: |
-            echo '${{ secrets.PASSWORD }}' >pass_file
-            chmod 0400 pass_file
-            scp -r ./out/* --rsh="sshpass -f pass_file ssh -l ${{ secrets.USERNAME }}" ${{ secrets.SSH_SERVER }}:public_html/test
+        run:
+            sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no -r ./out/* ${{ secrets.USERNAME }}@${{ secrets.SSH_SERVER }}:public_html/test
 
       - name: Success
         run: echo "Deployed successfully!"
