--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -30,9 +30,8 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y sshpass
       
       - name: Publish to server
-        run: |
-            echo "${{ secrets.SSH_SERVER }}"
-            sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no -r ./out/* ${{ secrets.USERNAME }}@${{ secrets.SSH_SERVER }}:public_html/test
+        run:
+            sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no -r ./out/* ${{ secrets.USERNAME }}@${{ secrets.SSH_SERVER }}:public_html/test/
 
       - name: Success
         run: echo "Deployed successfully!"
