--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -30,7 +30,8 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y sshpass
       
       - name: Publish to server
-        run: sshpass -p "${{ secrets.PASSWORD }}" scp -r ./out/* ${{ secrets.USERNAME }}@${{ secrets.SSH_SERVER }}:public_html/test
+        run:
+            sshpass -p "${{ secrets.PASSWORD }}" scp -o StrictHostKeyChecking=no -r ./out/* ${{ secrets.USERNAME }}@${{ secrets.SSH_SERVER }}:public_html/site
 
       - name: Success
         run: echo "Deployed successfully!"
