--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -1,9 +1,8 @@
 name: Production Deployment
 
 on:
-  push:
-    branches:
-      - 'main'
+    release:
+        types: [published]
 
 jobs:
   deploy:
