added substitution command

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -24,7 +24,9 @@ jobs:
         run: npm install
 
       - name: Lint and build
-        run: npm run build
+        run: |
+            npm run build
+            sed -i 's/href="\//href=".\//g' ./out/*html
 
       - name: Install sshpass
         run: sudo apt-get update && sudo apt-get install -y sshpass
