--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -1,8 +1,9 @@
 name: Production Deployment
 
 on:
-    release:
-        types: [published]
+  push:
+    branches:
+      - 'main'
 
 jobs:
   deploy:
